--- a/src/components/mainTop/mainTop.scss
+++ b/src/components/mainTop/mainTop.scss
@@ -1,5 +1,6 @@
-@import '../../mixins/media.scss';
+@import '../../style/mixins/media.scss';
 .mainTop {
+    margin-bottom: 80px;
     @include for-size (smallMob) {
         text-align: center;
     }
