--- a/src/components/ui/chunk/textField/textFiled.scss
+++ b/src/components/ui/chunk/textField/textFiled.scss
@@ -1,4 +1,4 @@
-@import '../../../../mixins/media.scss';
+@import '../../../../style/mixins/media.scss';
 .textField {
     display: grid;
     grid-template-columns: repeat(auto-fit, 280px);
