--- a/src/components/ui/chunk/buttons/buttons.scss
+++ b/src/components/ui/chunk/buttons/buttons.scss
@@ -1,4 +1,4 @@
-@import '../../../../mixins/media.scss';
+@import '../../../../style/mixins/media.scss';
 .buttons {
     display: grid;
     grid-template-columns: repeat(auto-fit, 148px);
