--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -40,16 +40,19 @@
       grid-column: 1 / all;
     }
 
-    .sidebar {
-      grid-column: 1/ all;
-    }
-
-    .mainTop {
-      grid-column: 4 / all;
-    }
-
     main {
-      grid-column: 4 / all;
+      grid-column: 1 / all;
+      display: grid;
+      grid-template-columns: inherit;
+
+      .main__menu {
+        grid-column: 1 / 3;
+      }
+
+      .main__content {
+        grid-column: 4 / all;
+        width: 100%;
+      }
     }
 
     .footer {
@@ -60,30 +63,20 @@
   }
 }
 
-@include for-size(desktop) {
-  .App {
-    &__container {
-      grid-column-gap: 32px;
-    }
-  }
-}
-
 @include for-size(tab) {
   .App {
     &__container {
       grid-template-columns: repeat(8, 1fr);
-      padding: 64px 32px 48px 64px;
+      padding: 64px 32px 48px 32px;
 
-      .mainTop {
-        grid-column: 1 / all;
-      }
-
-      main {
-        grid-column: 1 / all;
-      }
-
-      .footer {
-        grid-column: 1 / all;
+      main {  
+        .main__menu {
+          display: none;
+        }
+  
+        .main__content {
+          grid-column: 1 / all;
+        }
       }
     }
   }
@@ -94,9 +87,13 @@
     &__container {
       grid-template-columns: repeat(4, 1fr);
       padding: 32px 16px 48px 16px;
-      grid-column-gap: 24px;
-
       @include fontsMob;
+
+      main {
+        .main__content {
+          grid-column: 1 / all;
+        }
+      }
     }
   }
 }
