--- a/src/components/ui/chunk/dropDown/dropDown.scss
+++ b/src/components/ui/chunk/dropDown/dropDown.scss
@@ -5,6 +5,9 @@
     grid-template-columns: repeat(auto-fit, 280px);
     grid-column-gap: 32px;
     margin-bottom: 232px;
+    @include for-size(smallMob) {
+        grid-template-columns: none;
+    }
 
     // .selects__item
     &__item {
